5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1791_1615.log
== TEST (2019-05-29 14:33:52) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==2):
		va1 = va1 + 1
	i = i+1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:55) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:33) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:36:35) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- EXECUTION TIME:
0.438084
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:54) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:05) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	va1 = a1 + a2 + a3 + a4
	va2 = a1 + a2 + a3 +a4
	i = i+1
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:19) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:48:22) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- EXECUTION TIME:
0.670339
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
EMPATE
EMPATE
EMPATE
EMPATE
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:22) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:53) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
File "XXXX", line 25
    elif(va2>va1):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:48:55) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- EXECUTION TIME:
0.189349
-- ERROR:
  File "/home/codebench/codes/1791/1615/main.py", line 25
    elif(va2>va1):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:58) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:27:50) 
-- CODE:
from numpy import*
v1 = array(eval(input("Aneis acertados pelo primeiro jogador: ")))
v2 = array(eval(input("Aneis acertados pelo segundo jogador: ")))
i =0
a1 = 40
a2 = 20
a3 = 10
a4 = 0
va1 = 0 #pontuaçao do jogador 1 
va2= 0 #pontuaçao do jogador 2
while(i<size(v1)):
	if(v1[i]==a1 and v2[i]==a1):
		a1 = a1 + 1
		
	elif(v1[i]==a2 and v2[i]==a2):
		a2 = a2 +1
	elif(v1[i]==a3 and v2[i]==a3):
		a3 = a3 +1
	else:
		a4 = a4 +1
	i = i+1
	
	if(va1>va2):
		print("JOGADOR UM")
	elif(va2>va1):
		print("JOGADOR DOIS")
	else:
		print("EMPATE")
	
	
		
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
